# purl-validator.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  collect-purls_template.yml  release.yml  sync-purls.yml
fst_builder/: main.rs
fst_builder/data/: apk.txt  conan.txt  cpan.txt  cran.txt  npm.txt  purls.txt  pypi.txt  swift.txt
src/: lib.rs  validate_tests.rs
tests/data/: test_purls.fst
