[package]
name = "purl_validator"
version = "0.1.0"
edition = "2024"
authors = ["Keshav Priyadarshi <git@keshav.space>", "AboutCode <info@aboutcode.org>"]
description = "PackageURL validator using prebuilt FST"
license = "Apache-2.0"
repository = "https://github.com/aboutcode-org/purl-validator-rust"

exclude = ["fst_builder/*"]

include = [
    "src/**",
    "purls.fst",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
name = "purl_validator"
crate-type = ["rlib"]

[dependencies]
fst = "0.4.7"
memmap2 = "0.9.9"
once_cell = "1.21"

[[bin]]
name = "fst_builder"
path = "fst_builder/main.rs"
