[package]
name = "purl_validator"
version = "0.13.0"
edition = "2024"
authors = ["Keshav Priyadarshi <git@keshav.space>", "AboutCode <info@aboutcode.org>"]
license = "Apache-2.0"

description = "Offline PackageURL validator using a prebuilt FST of known packages."
readme = "README.md"
documentation = "https://docs.rs/purl_validator"

repository = "https://github.com/aboutcode-org/purl-validator.rs"
keywords = ["packageurl", "package", "purl", "sbom-tool"]
categories = ["development-tools", "security" ]

include = [
    "src/**",
    "purls.fst",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE"
]

[dependencies]
fst = "0.4.7"
memmap2 = "0.9.9"
once_cell = "1.21"

[[bin]]
name = "fst_builder"
path = "fst_builder/main.rs"
